--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tanstack/react-query": "^4.3.9",
     "classnames": "^2.3.2",
     "next": "12.3.0",
     "react": "18.2.0",
