--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
   "dependencies": {
     "@tanstack/react-query": "^4.3.9",
     "classnames": "^2.3.2",
+    "file-saver": "^2.0.5",
     "next": "12.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
   "devDependencies": {
     "@netlify/plugin-nextjs": "^4.23.1",
+    "@types/file-saver": "^2.0.5",
     "@types/node": "18.7.18",
     "@types/react": "18.0.20",
     "@types/webpack-env": "^1.18.0",
