--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "file-saver": "^2.0.5",
     "next": "12.3.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-icons": "^4.4.0"
   },
   "devDependencies": {
     "@netlify/plugin-nextjs": "^4.23.1",
