--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "file-saver": "^2.0.5",
     "next": "12.3.0",
     "react": "18.2.0",
+    "react-collapse": "^5.1.1",
+    "react-colorful": "^5.6.1",
     "react-dom": "18.2.0",
     "react-icons": "^4.4.0"
   },
@@ -22,6 +24,7 @@
     "@types/file-saver": "^2.0.5",
     "@types/node": "18.7.18",
     "@types/react": "18.0.20",
+    "@types/react-collapse": "^5.0.1",
     "@types/webpack-env": "^1.18.0",
     "eslint": "8.23.1",
     "eslint-config-next": "12.3.0",
