--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-collapse": "^5.1.1",
     "react-colorful": "^5.6.1",
     "react-dom": "18.2.0",
+    "react-dropzone": "^14.2.3",
     "react-icons": "^4.4.0"
   },
   "devDependencies": {
