--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-colorful": "^5.6.1",
     "react-dom": "18.2.0",
     "react-dropzone": "^14.2.3",
-    "react-icons": "^4.4.0"
+    "react-icons": "^4.4.0",
+    "react-image-crop": "^10.0.9"
   },
   "devDependencies": {
     "@netlify/plugin-nextjs": "^4.23.1",
