--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@tanstack/react-query": "^4.3.9",
     "classnames": "^2.3.2",
+    "color": "^4.2.3",
     "file-saver": "^2.0.5",
     "next": "12.3.0",
     "react": "18.2.0",
@@ -23,6 +24,7 @@
   },
   "devDependencies": {
     "@netlify/plugin-nextjs": "^4.23.1",
+    "@types/color": "^3.0.3",
     "@types/file-saver": "^2.0.5",
     "@types/node": "18.7.18",
     "@types/react": "18.0.20",
