--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "react-colorful": "^5.6.1",
     "react-dom": "18.2.0",
     "react-dropzone": "^14.2.3",
-    "react-icons": "^4.4.0",
+    "react-icons": "^4.10.1",
     "react-image-crop": "^10.0.9"
   },
   "devDependencies": {
@@ -32,6 +32,6 @@
     "@types/webpack-env": "^1.18.0",
     "eslint": "8.23.1",
     "eslint-config-next": "12.3.0",
-    "typescript": "4.8.3"
+    "typescript": "^5.1.6"
   }
 }
