--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "color": "^4.2.3",
     "file-saver": "^2.0.5",
     "next": "12.3.0",
+    "png-metadata": "https://github.com/theresnotime/png-metadata",
     "react": "18.2.0",
     "react-collapse": "^5.1.1",
     "react-colorful": "^5.6.1",
