--- a/package.json
+++ b/package.json
@@ -6,7 +6,11 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest"
+  },
+  "engines": {
+    "node": ">=18"
   },
   "dependencies": {
     "@tanstack/react-query": "^4.33.0",
@@ -25,14 +29,20 @@
   },
   "devDependencies": {
     "@netlify/plugin-nextjs": "^4.23.1",
+    "@testing-library/jest-dom": "^6.1.2",
+    "@testing-library/react": "^14.0.0",
     "@types/color": "^3.0.3",
     "@types/file-saver": "^2.0.5",
+    "@types/jest": "^29.5.4",
     "@types/node": "18.7.18",
     "@types/react": "18.0.20",
     "@types/react-collapse": "^5.0.1",
     "@types/webpack-env": "^1.18.0",
     "eslint": "8.47.0",
     "eslint-config-next": "12.3.0",
+    "jest": "^29.6.4",
+    "jest-canvas-mock": "^2.5.2",
+    "jest-environment-jsdom": "^29.6.4",
     "typescript": "^5.1.6"
   }
 }
