--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "classnames": "^2.3.2",
     "color": "^4.2.3",
     "file-saver": "^2.0.5",
-    "next": "12.3.0",
+    "next": "^13.4.19",
     "png-metadata": "https://github.com/olivvybee/png-metadata",
     "react": "18.2.0",
     "react-collapse": "^5.1.1",
