--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "test": "jest"
+    "test": "jest",
+    "new": "tsx ./scripts/new-generator/new-generator.ts"
   },
   "engines": {
     "node": ">=18"
@@ -34,6 +35,7 @@
     "@testing-library/react": "^14.0.0",
     "@types/color": "^3.0.3",
     "@types/file-saver": "^2.0.5",
+    "@types/inquirer": "^9.0.7",
     "@types/jest": "^29.5.4",
     "@types/node": "20.5.9",
     "@types/react": "18.0.20",
@@ -41,9 +43,11 @@
     "@types/webpack-env": "^1.18.0",
     "eslint": "8.48.0",
     "eslint-config-next": "12.3.0",
+    "inquirer": "^9.2.14",
     "jest": "^29.6.4",
     "jest-canvas-mock": "^2.5.2",
     "jest-environment-jsdom": "^29.6.4",
+    "tsx": "^4.7.1",
     "typescript": "^5.1.6"
   }
 }
