--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,5 +17,5 @@
     "noImplicitAny": false
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "jest.config.mjs"],
-  "exclude": ["node_modules"]
+  "exclude": ["node_modules", "scripts/new-generator/template"]
 }
